testsuite/tests/saks/should_fail/saks_fail003.hs
{-# LANGUAGE StandaloneKindSignatures #-}
{-# LANGUAGE NamedWildCards, PolyKinds #-}

module SAKS_Fail003 where

type T :: _w
data T = MkT
